2005-02-29 Ian Rutt
 * Changed documentation to match renamed I/O sections

2005-02-28 Magnus Hagdorn
 * g_land.config: renamed I/O section

2005-02-26 Magnus Hagdorn
 * bumped version to 0.3
 * physics.tex: removed mb section since Ian resurrected it elsewhere
 * driver.tex: some updates for eis climate
 * glint.tex: fixed reference
 * intro.tex: removed misleading section on GLIMMER
 * glimmer_config.f90: added subroutine checking if all section are used
   and hooked it up (eis_glide.f90, simple_glide.f90, glint.f90)
 * glimmer_ncparams.f90: prefixed section names with CF
 * glimmer_version.f90.in: version string is generated by configure
 * glimmer_global.f90: load new version module
 * configure.in handles versioning and also generates new script glimmer-config
 * updated NEWS
	
2005-02-25 Ian Rutt
 * Finished updating GLINT documentation
 * Added mass-balance scheme docs for PDD (resurrected from old docs)
 * Moved glint_example files to subdirectory in data (probably temporary)
	
2005-02-24 Ian Rutt
 * Updated GLINT documetation, resurrected some old stuff about using
   GLINT, and added a diagram about timestepping. This is perhaps a bit big
   atm...
 * Changed doc build so that DIA doesn't display splash screen (added -n)
 * Added old LaTeX for GLINT API as appendix and started updating
   it. Incomplete, though.

2005-02-23 Ian Rutt
 * Renamed modules of mass-balance schemes to glimmer_*
 * Completed implementation of renaming scheme
	
2005-02-23 Magnus Hagdorn
 * removed old tests in data

2005-02-23 Magnus Hagdorn
 * removed unused symbols and dummy arguments

2005-02-23 Ian Rutt
 * More reorganisation and pruning
 * Set all times and timesteps in GLINT to be in *hours*, converted to
   years when calling GLIDE
 * All times in GLINT are integer type
 * Implemented mass-balance timesteps in GLINT - all instances must have
   the same mass-balance timestep
 * Moved specification of earth's radius in glimmer_proj.f90 to config file
   input